# mobox

./: .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yaml
.agents/skills/verify-contracts/: AGENTS.md  SKILL.md
.claude/rules/: verify-contracts.md
.cursor/rules/: event-streaming-pattern.mdc  verify-contracts.mdc
agents/: README.md
agents/claude-hello-world/: Dockerfile  README.md  agent.yaml  pyproject.toml  run_agent.py
agents/claude-research/: .env.example  .gitignore  Dockerfile  README.md  agent.yaml  pyproject.toml  run_agent.py
agents/claude-research/.claude/skills/pdf/: SKILL.md
agents/claude-research/.claude/skills/pptx/: SKILL.md
agents/claude-research/prompts/: data_analyst.txt  lead_agent.txt  report_writer.txt  researcher.txt
agents/claude-research/utils/: __init__.py  file_manager.py  subagent_tracker.py
agents/deepagents-multi-hop-rag/: .env.example  AGENTS.md  Dockerfile  README.md  agent.yaml  docker.compose.yml  pyproject.toml  run_agent.py
agents/deepagents-multi-hop-rag/prompts/: orchestrator.txt  rag.txt
agents/deepagents-multi-hop-rag/tools/: rag.py  think_tool.py
agents/deepagents-simple-research/: .env.example  Dockerfile  agent.yaml  pyproject.toml  run_agent.py
agents/deepagents-simple-research/prompts/: orchestrator.txt  researcher.txt
agents/deepagents-simple-research/tools/: tavily_search.py  think_tool.py
api/: .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml
api/core/: agents.py  config.py  database.py  event_formatters.py  logging.py  utils.py
api/core/sandbox/: __init__.py  modal.py  sandbox.py  subprocess.py  types.py
api/migrations/: env.py
api/migrations/versions/: 20260127_000000_001_initial_schema.py  20260127_000001_002_add_sdk_session_id.py  20260128_000000_003_add_agent_columns.py
api/models/: chat.py
api/routes/: agents.py  chat.py  health.py  sessions.py
api/routes/middlewares/: request_id.py
api/routes/schemas/: __init__.py  chat.py  delete.py  event.py  message.py  session.py  usage.py
data/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  workspace.yaml
data/src/mobox_dagster/: definitions.py
data/src/mobox_dagster/defs/: assets.py  resources.py
docs/: event-mapping.md  stream-resumption.md
frontend/: .env.example  Dockerfile  README.md  next.config.ts  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx
frontend/app/(chat)/: layout.tsx  page.tsx  providers.tsx
frontend/app/(chat)/actions/: agents.ts  chat.ts  index.ts  sessions.ts  types.ts
frontend/app/(chat)/api/chat/: route.ts  (+1 more)
frontend/components/: agent-select-modal.tsx  app-sidebar.tsx  chat-list.tsx  chat.tsx  message-actions.tsx  message-activity.tsx  message-reasoning.tsx  message-todos.tsx  message.tsx  messages.tsx  mobox-logo.tsx  multimodal-input.tsx  preview-attachment.tsx  sidebar-toggle.tsx  sidebar-user-nav.tsx  suggested-actions.tsx  toast.tsx
frontend/components/elements/: actions.tsx  code-block.tsx  context.tsx  conversation.tsx  loader.tsx  message.tsx  processing-trigger.tsx  prompt-input.tsx  reasoning.tsx  response.tsx  suggestion.tsx  tool.tsx
frontend/components/ui/: alert-dialog.tsx  avatar.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  hover-card.tsx  input.tsx  label.tsx  progress.tsx  scroll-area.tsx  select.tsx  separator.tsx  sheet.tsx  sidebar.tsx  skeleton.tsx  spinner.tsx  textarea.tsx  tooltip.tsx
frontend/contexts/: chat-sessions-context.tsx
frontend/hooks/: use-messages.tsx
shared/: __init__.py  emitter.py  events.py  load_prompt.py  pyproject.toml
shared/utils/: __init__.py  claude_parser.py  deepagents_parser.py
(+3 files in other folders)
