[project]
name = "mobox_dagster"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.12.11",
    "dagster-weaviate>=0.0.3",
    "pypdf>=5.0.0"
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mobox_dagster"]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "mobox_dagster"
registry_modules = [
    "mobox_dagster.components.*",
]
